4_Kubernetes/LetsKube/Kubernetes/cube2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lets-kube-cube2-svc
  namespace: lets-kube
spec:
  selector:
    app: lets-kube-cube2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
