4_Kubernetes/LetsKube/Kubernetes/cube2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lets-kube-cube2
  namespace: lets-kube
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - host: lets.kube.cube2
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lets-kube-cube2-svc
                port:
                  number: 80
